--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,8 @@ requires-python = ">=3.10"
 dependencies = [
     "google-genai",
     "python-dotenv",
-    "termcolor"
+    "restrictedpython>=8.1",
+    "termcolor",
 ]
 
 [tool.uv]
