--- a/.env.local.example
+++ b/.env.local.example
@@ -1,6 +1,9 @@
 # Google Gemini API Key
 GEMINI_API_KEY=your_api_key_here
 
-# Gemini Model Name (Optional)
-# Options: gemini-3-pro-preview, gemini-3-flash-preview, gemini-2.5-flash, gemini-2.0-flash
-GEMINI_MODEL_NAME=gemini-3-pro-preview
+# Default Model (used everywhere)
+GEMINI_MODEL_NAME=gemini-3-flash-preview
+
+# Available models for /model command (optional, comma-separated)
+# If not set, uses built-in defaults
+# RLM_AVAILABLE_MODELS=gemini-3-flash-preview,gemini-3-pro-preview,gemini-2.5-flash,gemini-2.5-flash-lite,gemini-2.5-pro
