--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,22 @@
+# Environment
 .env
 .env.local
+
+# Python
 __pycache__/
 *.pyc
+*.pyo
+*.egg-info/
+.eggs/
+dist/
+build/
+
+# IDE  
+.vscode/
+.idea/
+
+# Project specific
 logs/
+src_backup/
+.venv/
+.ruff_cache/
