--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "rlm-project"
+name = "rlm"
 version = "0.1.0"
 description = "Recursive Language Models implementation using Gemini"
 readme = "README.md"
@@ -7,11 +7,18 @@ requires-python = ">=3.10"
 dependencies = [
     "google-genai",
     "pymupdf",
+    "pypdf>=6.6.0",
     "python-docx",
     "python-dotenv",
+    "python-pptx>=1.0.2",
     "restrictedpython>=8.1",
+    "rich",
     "termcolor",
+    "textual",
 ]
+
+[project.scripts]
+rlm = "rlm.cli.main:main"
 
 [tool.uv]
 dev-dependencies = [
